--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/http": "5.0.3",
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
+    "@ionic-native/calendar": "^4.5.3",
     "@ionic-native/camera": "^4.5.3",
     "@ionic-native/core": "4.4.0",
     "@ionic-native/dialogs": "^4.5.3",
@@ -28,29 +29,33 @@
     "@ionic-native/file-transfer": "^4.5.3",
     "@ionic-native/geolocation": "^4.5.3",
     "@ionic-native/image-picker": "^4.5.3",
+    "@ionic-native/keyboard": "^4.5.3",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/pro": "1.0.17",
     "@ionic/storage": "2.1.3",
+    "chart.js": "^2.7.2",
+    "com.synconset.imagepicker": "~2.1.8",
     "cordova-android": "^6.4.0",
+    "cordova-plugin-calendar": "^5.0.0",
     "cordova-plugin-camera": "^4.0.2",
+    "cordova-plugin-device": "^2.0.1",
     "cordova-plugin-dialogs": "^2.0.1",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-filepath": "^1.2.0",
     "cordova-plugin-geolocation": "^4.0.1",
+    "cordova-plugin-ionic-keyboard": "^2.0.5",
+    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-telerik-imagepicker": "^2.1.8",
+    "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
+    "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18",
-    "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-plugin-device": "^2.0.1",
-    "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-ionic-webview": "^1.1.16",
-    "cordova-plugin-ionic-keyboard": "^2.0.5",
-    "com.synconset.imagepicker": "~2.1.8"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.8",
@@ -67,7 +72,8 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-calendar": {}
     },
     "platforms": [
       "android"
