--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ionic-native/file-path": "^4.5.3",
     "@ionic-native/file-transfer": "^4.5.3",
     "@ionic-native/geolocation": "^4.5.3",
+    "@ionic-native/google-maps": "^4.5.3",
     "@ionic-native/image-picker": "^4.5.3",
     "@ionic-native/keyboard": "^4.5.3",
     "@ionic-native/splash-screen": "4.4.0",
@@ -53,6 +54,7 @@
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
+    "ng2-charts": "^1.6.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
