--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@ionic-native/geolocation": "^4.5.3",
         "@ionic-native/google-maps": "^4.5.3",
         "@ionic-native/image-picker": "^4.5.3",
+        "@ionic-native/image-resizer": "^4.6.0",
         "@ionic-native/keyboard": "^4.5.3",
         "@ionic-native/splash-screen": "4.4.0",
         "@ionic-native/status-bar": "4.4.0",
@@ -52,6 +53,7 @@
         "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-telerik-imagepicker": "^2.1.8",
         "cordova-plugin-whitelist": "^1.3.3",
+        "info.protonet.imageresizer": "^0.1.1",
         "ionic-angular": "3.9.2",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
@@ -76,7 +78,9 @@
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-ionic-webview": {},
             "cordova-plugin-ionic-keyboard": {},
-            "cordova-plugin-calendar": {}
+            "cordova-plugin-calendar": {},
+            "info.protonet.imageresizer": {},
+            "cordova-plugin-geolocation": {}
         },
         "platforms": [
             "android"
