--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
         "@ionic-native/splash-screen": "4.4.0",
         "@ionic-native/status-bar": "4.4.0",
         "@ionic/pro": "1.0.17",
-        "@ionic/storage": "2.1.3",
+        "@ionic/storage": "^2.1.3",
         "@mobiscroll/angular-trial": "https://npm.mobiscroll.com/@mobiscroll/angular-trial/-/angular-trial-4.0.0.tgz",
         "chart.js": "^2.7.2",
         "com.synconset.imagepicker": "~2.1.8",
