--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-telerik-imagepicker": "^2.1.8",
         "cordova-plugin-whitelist": "^1.3.3",
+        "cordova-sqlite-storage": "^2.3.0",
         "info.protonet.imageresizer": "^0.1.1",
         "ionic-angular": "3.9.2",
         "ionic-plugin-keyboard": "^2.2.1",
@@ -80,7 +81,8 @@
             "cordova-plugin-ionic-keyboard": {},
             "cordova-plugin-calendar": {},
             "info.protonet.imageresizer": {},
-            "cordova-plugin-geolocation": {}
+            "cordova-plugin-geolocation": {},
+            "cordova-sqlite-storage": {}
         },
         "platforms": [
             "android"
