--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
         "@angular/http": "5.0.3",
         "@angular/platform-browser": "5.0.3",
         "@angular/platform-browser-dynamic": "5.0.3",
+        "@ionic-native/app-rate": "^4.7.0",
         "@ionic-native/calendar": "^4.5.3",
+        "@ionic-native/call-number": "^4.7.0",
         "@ionic-native/camera": "^4.5.3",
         "@ionic-native/core": "4.4.0",
         "@ionic-native/dialogs": "^4.5.3",
@@ -37,9 +39,11 @@
         "@ionic/pro": "1.0.17",
         "@ionic/storage": "^2.1.3",
         "@mobiscroll/angular-trial": "https://npm.mobiscroll.com/@mobiscroll/angular-trial/-/angular-trial-4.0.0.tgz",
+        "call-number": "^1.0.1",
         "chart.js": "^2.7.2",
         "com.synconset.imagepicker": "~2.1.8",
         "cordova-android": "^6.4.0",
+        "cordova-plugin-apprate": "^1.3.0",
         "cordova-plugin-calendar": "^5.0.0",
         "cordova-plugin-camera": "^4.0.2",
         "cordova-plugin-device": "^2.0.1",
@@ -48,6 +52,8 @@
         "cordova-plugin-file-transfer": "^1.7.1",
         "cordova-plugin-filepath": "^1.2.0",
         "cordova-plugin-geolocation": "^4.0.1",
+        "cordova-plugin-globalization": "^1.11.0",
+        "cordova-plugin-inappbrowser": "^3.0.0",
         "cordova-plugin-ionic-keyboard": "^2.0.5",
         "cordova-plugin-ionic-webview": "^1.1.16",
         "cordova-plugin-splashscreen": "^5.0.2",
@@ -82,7 +88,9 @@
             "cordova-plugin-calendar": {},
             "info.protonet.imageresizer": {},
             "cordova-plugin-geolocation": {},
-            "cordova-sqlite-storage": {}
+            "cordova-sqlite-storage": {},
+            "mx.ferreyra.callnumber": {},
+            "cordova-plugin-apprate": {}
         },
         "platforms": [
             "android"
