--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
         "ng2-charts": "^1.6.0",
+        "patternomaly": "^1.3.0",
         "rxjs": "5.5.2",
         "sw-toolbox": "3.6.0",
         "zone.js": "0.8.18"
