--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@angular/platform-browser": "5.0.3",
         "@angular/platform-browser-dynamic": "5.0.3",
         "@ionic-native/app-rate": "^4.7.0",
+        "@ionic-native/badge": "^4.10.1",
         "@ionic-native/calendar": "^4.5.3",
         "@ionic-native/call-number": "^4.7.0",
         "@ionic-native/camera": "^4.5.3",
@@ -44,6 +45,7 @@
         "com.synconset.imagepicker": "~2.1.8",
         "cordova-android": "^6.4.0",
         "cordova-plugin-apprate": "^1.3.0",
+        "cordova-plugin-badge": "^0.8.7",
         "cordova-plugin-calendar": "^5.0.0",
         "cordova-plugin-camera": "^4.0.2",
         "cordova-plugin-device": "^2.0.1",
@@ -91,7 +93,8 @@
             "cordova-plugin-geolocation": {},
             "cordova-sqlite-storage": {},
             "mx.ferreyra.callnumber": {},
-            "cordova-plugin-apprate": {}
+            "cordova-plugin-apprate": {},
+            "cordova-plugin-badge": {}
         },
         "platforms": [
             "android"
