--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "@angular/platform-browser": "5.0.3",
         "@angular/platform-browser-dynamic": "5.0.3",
         "@ionic-native/app-rate": "^4.7.0",
-        "@ionic-native/badge": "^4.10.1",
+        "@ionic-native/badge": "^4.12.2",
         "@ionic-native/calendar": "^4.5.3",
         "@ionic-native/call-number": "^4.7.0",
         "@ionic-native/camera": "^4.5.3",
@@ -38,14 +38,14 @@
         "@ionic-native/splash-screen": "4.4.0",
         "@ionic-native/status-bar": "4.4.0",
         "@ionic/pro": "1.0.17",
-        "@ionic/storage": "^2.1.3",
+        "@ionic/storage": "^2.2.0",
         "@mobiscroll/angular-trial": "https://npm.mobiscroll.com/@mobiscroll/angular-trial/-/angular-trial-4.0.0.tgz",
         "call-number": "^1.0.1",
         "chart.js": "^2.7.2",
         "com.synconset.imagepicker": "~2.1.8",
         "cordova-android": "^6.4.0",
         "cordova-plugin-apprate": "^1.3.0",
-        "cordova-plugin-badge": "^0.8.7",
+        "cordova-plugin-badge": "git+https://github.com/katzer/cordova-plugin-badge.git",
         "cordova-plugin-calendar": "^5.0.0",
         "cordova-plugin-camera": "^4.0.2",
         "cordova-plugin-device": "^2.0.1",
